force-app/main/default/objects/Expense__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>