force-app/main/default/objects/Expense__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes area to add exta expense notes</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>