force-app/main/default/objects/Expense__c/fields/Pay_Category__c.field-meta.xml
<CustomField>
    <fullName>Pay_Category__c</fullName>
    <description>How is this Bill paid?</description>
    <label>Pay Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill Pay</fullName>
                <default>true</default>
                <label>Bill Pay</label>
            </value>
            <value>
                <fullName>Auto Pay</fullName>
            </value>
            <value>
                <fullName>Cash or Check</fullName>
            </value>
            <value>
                <fullName>Pay Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>