force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Pay_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>